--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1"
   },
+  "prettier" : {
+    "tabwidth": 4,
+    "bracketSpacing": true,
+    "singleQuote": true
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
